valid_tests/statements/test3.go
// Test 3: Assignment and increment/decrement
func main() {
    x := 10
    x = x + 5
    x = x * 2
    
    y := 1
    y++
    y--
    
    z := y
    z += 3
}
