invalid_tests/statements/test4.go
// Test 4: Assignment to invalid lvalue
func main() {
    10 = x
}
